[package]
name = "papi-rs"
version = "0.1.0"
authors = ["chenxi <foreseazhang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1.0"
openssl = { version="0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
listenfd = "0.3"
num_cpus = "1.0"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }

